WebView in Member Detail page for loading 4 different websites.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,7 +18,8 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".MemberDetailActivity"></activity>
+        <activity android:name=".MemberDetailActivity" />
+        <activity android:name=".MemberWebViewActivity"></activity>
     </application>
 
 </manifest>
